# BP_DZ9_Task2_BezzabotnovDV

./: .gitignore  BP_DZ9_Task2_BezzabotnovDV.cpp  BP_DZ9_Task2_BezzabotnovDV.h  CMakeLists.txt  EquilateralTriangle.cpp  EquilateralTriangle.h  Figure.cpp  Figure.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  Parallelogram.cpp  Parallelogram.h  Quadrate.cpp  Quadrate.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  RightTriangle.cpp  RightTriangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
